// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Slider checkGrammar=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider checkGrammar=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider checkHighlight=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider checkHighlight=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider checkSpaces=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider checkSpaces=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider className="my-classname" 1`] = `
<div
  className="uu5-bricks-slider my-classname uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider className="test-classname" 1`] = `
<div
  className="uu5-bricks-slider test-classname uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider content=12345 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider controlled=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider controlled=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider default props 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider disabled=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider disabled=false 3`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider disabled=true 1`] = `
<div
  className="uu5-bricks-slider uu5-common-disabled uu5-bricks-slider-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      disabled={true}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider disabled=true 3`] = `
<div
  className="uu5-bricks-slider uu5-common-disabled uu5-bricks-slider-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      disabled={true}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider docKit examples UU5.Bricks.Slider example01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Slider
    id="defaultProps"
    key="defaultProps"
    ref_={[Function]}
  />
  <Slider
    id="propsSetting"
    key="propsSetting"
    min={2}
    size="xl"
    step={3}
    value={4}
  />
</div>
`;

exports[`UU5.Bricks.Slider dynamic=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider dynamic=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-slider uu-fulltextsearch-0 uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider hidden=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider hidden=false 3`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider hidden=true 1`] = `
<div
  className="uu5-bricks-slider uu5-common-hidden uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider hidden=true 3`] = `
<div
  className="uu5-bricks-slider uu5-common-hidden uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider id="myId" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="myId"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="myId-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="myId-0"
      key="myId-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider id="test-id" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="test-id"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="test-id-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="test-id-0"
      key="test-id-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider max=50 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={50}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider min=10 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={10}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider name="myName" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  name="myName"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      name="myName-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Slider nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Slider nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Slider nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Slider nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider noIndex=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider noIndex=true 1`] = `
<div
  className="uu5-bricks-slider uu5-noindex uu-fulltextsearch-0 uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider noPrint=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider noPrint=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider props.Function UU5.Bricks.Slider -  onChange() should be called 1`] = `
<Slider
  id="uuID"
  onChange={[Function]}
  onChanged={[Function]}
  value={4}
/>
`;

exports[`UU5.Bricks.Slider props.Function UU5.Bricks.Slider -  onChanged() should be called 1`] = `
<Slider
  id="uuID"
  onChange={[Function]}
  onChanged={[Function]}
  value={4}
/>
`;

exports[`UU5.Bricks.Slider pureRender=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider pureRender=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider selected=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider selected=true 1`] = `
<div
  className="uu5-bricks-slider uu5-common-selected uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider size="l" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-l"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider size="m" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider size="s" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-s"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider size="xl" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-xl"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider step=5 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={5}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider style={"margin":8} 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider textCorrector=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider textCorrector=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title="My Tooltip"
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider value=[33,77] 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
      value={33}
    />
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-1"
      key="uuID-1"
      ref_={[Function]}
      value={77}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider value=30 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
      value={30}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider vertical=false 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider vertical=true 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m uu5-bricks-slider-vertical"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      id="uuID-0"
      key="uuID-0"
      ref_={[Function]}
    />
  </div>
</div>
`;
